refactor(project): remove non-forum platforms and web